--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,10 +1,15 @@
-FROM node:22-alpine AS deps
+FROM node:22-bookworm-slim AS base
+RUN apt-get update \
+  && apt-get install -y openssl ca-certificates \
+  && rm -rf /var/lib/apt/lists/*
+WORKDIR /app
+
+FROM base AS deps
 WORKDIR /app
 COPY package.json package-lock.json ./
 RUN npm ci
 
-FROM node:22-alpine AS build
-WORKDIR /app
+FROM base AS build
 COPY --from=deps /app/node_modules ./node_modules
 COPY prisma ./prisma
 COPY tsconfig.json ./
@@ -12,8 +17,7 @@ COPY . .
 RUN npm run prisma:generate
 RUN npm run build
 
-FROM node:22-alpine AS runner
-WORKDIR /app
+FROM base AS runner
 ENV NODE_ENV=production
 COPY --from=build /app/node_modules ./node_modules
 COPY --from=build /app/package.json ./package.json
