--- a/client/package.json
+++ b/client/package.json
@@ -30,8 +30,7 @@
     "react-hook-form": "^7.62.0",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.4.0",
-    "tweetnacl": "^1.0.3",
-    "winston": "^3.19.0"
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
