--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -30,7 +30,7 @@ services:
     depends_on:
       - db
     ports:
-      - "3000:3000"
+      - "${OUTGOING_PORT_SERVER:-3000}:3000"
 
   client:
     build:
@@ -50,7 +50,7 @@ services:
     depends_on:
       - server
     ports:
-      - "3001:3000"
+      - "${OUTGOING_PORT_CLIENT:-3001}:3000"
 
 volumes:
   db-data:
