fix: allow explicit RP_ID for passkeys to fix production issue

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ POSTGRES_PASSWORD=ratchet_password
 POSTGRES_DB=ratchet_chat
 DATABASE_URL=postgresql://ratchet:ratchet_password@db:5432/ratchet_chat
 SERVER_HOST=localhost:3000
+RP_ID=localhost
 JWT_SECRET=change-me
 CORS_ALLOWED_ORIGINS=http://localhost:3001
 NEXT_PUBLIC_API_URL=http://localhost:3000
