--- a/server/package.json
+++ b/server/package.json
@@ -17,8 +17,11 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "file-type": "^21.2.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "socket.io": "^4.7.5",
+    "uuid": "^13.0.0",
     "winston": "^3.19.0",
     "ws": "^8.18.3",
     "zod": "^3.23.8"
@@ -28,7 +31,9 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.14.12",
+    "@types/uuid": "^10.0.0",
     "@types/ws": "^8.18.1",
     "prisma": "^5.18.0",
     "ts-node": "^10.9.2",
