--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dexie": "^4.0.11",
-    "emoji-picker-react": "^4.16.1",
+    "@emoji-mart/data": "^1.2.1",
+    "emoji-mart": "^5.6.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
