Improve chat search UX and add VAPID config for push notifications
Chat search improvements:
- Show all messages during search with highlighted matches
- Add "1 / N" counter and up/down navigation arrows
- Reverse order so 1/N means newest match
- Memoize ReactMarkdown components for performance
- Only scroll on query change, not every render

Push notifications:
- Add VAPID environment variables to docker-compose.prod.yml
- Document VAPID keys in .env.example

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,8 @@ NEXT_PUBLIC_API_HOST=localhost:3000
 NEXT_PUBLIC_APP_URL=http://localhost:3001
 OUTGOING_PORT_SERVER=3000
 OUTGOING_PORT_CLIENT=3001
+
+# Push notifications (generate with: npx web-push generate-vapid-keys)
+VAPID_PUBLIC_KEY=
+VAPID_PRIVATE_KEY=
+VAPID_SUBJECT=mailto:admin@yourdomain.com
